@@ -29,8 +29,6 @@ described in L<perlsyn>.
 C<PPI::Statement::Given> has no methods beyond those provided by the
 standard L<PPI::Structure>, L<PPI::Node> and L<PPI::Element> methods.
 
-Got any ideas for methods? Submit a report to rt.cpan.org!
-
 =cut
 
 use strict;
