@@ -33,8 +33,6 @@ that represent boolean contexts used in various conditions.
 C<PPI::Structure::Condition> has no methods beyond those provided by
 the standard L<PPI::Structure>, L<PPI::Node> and L<PPI::Element> methods.
 
-Got any ideas for methods? Submit a report to rt.cpan.org!
-
 =cut
 
 use strict;
