@@ -28,8 +28,6 @@ reference of C<HASH> reference constructors.
 C<PPI::Structure::Constructor> has no methods beyond those provided by
 the standard L<PPI::Structure>, L<PPI::Node> and L<PPI::Element> methods.
 
-Got any ideas for methods? Submit a report to rt.cpan.org!
-
 =cut
 
 use strict;
