@@ -29,8 +29,6 @@ contain the three part C<for> expression.
 C<PPI::Structure::For> has no methods beyond those provided by the
 standard L<PPI::Structure>, L<PPI::Node> and L<PPI::Element> methods.
 
-Got any ideas for methods? Submit a report to rt.cpan.org!
-
 =cut
 
 use strict;
