@@ -27,8 +27,6 @@ There are several methods available for C<PPI::Token::Quote::Double>, beyond
 those provided by the parent L<PPI::Token::Quote>, L<PPI::Token> and
 L<PPI::Element> classes.
 
-Got any ideas for methods? Submit a report to rt.cpan.org!
-
 =cut
 
 use strict;
