@@ -28,8 +28,6 @@ There are no methods available for C<PPI::Token::Regexp::Substitute>
 beyond those provided by the parent L<PPI::Token::Regexp>, L<PPI::Token>
 and L<PPI::Element> classes.
 
-Got any ideas for methods? Submit a report to rt.cpan.org!
-
 =cut
 
 use strict;
