@@ -18,7 +18,7 @@ BEGIN {
 use constant HAVE_ALARM   => !  ( $^O eq 'MSWin32' or $^O eq 'cygwin' );
 
 # 5.8.7 was the first version to resolve the notorious
-# "unicode length caching" bug. See RT #FIXME
+# "unicode length caching" bug.
 use constant HAVE_UNICODE => !! ( $] >= 5.008007 );
 
 # Common reusable true and false functions
